:construction_worker: build: use linux arch for binary

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,5 +1,5 @@
 PROJECT = $(shell basename $(CURDIR))
 build:
-	go build -o bin/${PROJECT} ./src
+	GOOS=linux GOARCH=amd64 go build -o bin/${PROJECT} ./src
 build-win:
 	GOOS=windows GOARCH=amd64 go build -o bin/${PROJECT}.bat ./src
